# AdventOfCode

./: .gitignore
2023/day1/: day1_2.py
2024/day2/: main.cpp
2024/day3/: main.cpp
AdventOfCode2023/: README.md
AdventOfCode2023/day2/: day2_1.py
AdventOfCode2023/day3/: day3_2.py
AdventOfCode2023/day4/: day4_2.py
AdventOfCode2023/day5/: day5_1.py
AdventOfCode2023/old/day4/: day4_1.py
AdventOfCode2023/src/: day1.py  day2.py
AdventOfCode2024/: CMakeLists.txt
AdventOfCode2024/data/: README.md
AdventOfCode2024/day1/: main.cpp
AdventOfCode2024/day3/: main.cpp
AdventOfCode2024/day4/: main.cpp
AdventOfCode2024/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day14_image_generator.py  day14_visualization.py  day15.cpp  day15_visualization.py  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
AdventOfCode2024/src/visualization/: day14_visualization.py  day15_visualization.py
AdventOfCode2025/: CMakeLists.txt
AdventOfCode2025/src/: day1.cpp  day2.cpp  day3.cpp
day1/: day1_1.py
day2/: day2_2.py
day3/: day3_1.py
day5/: day5_1_1.py  day5_2.py
